Add media to search API
